# shortcuts

./: .gitignore  morning-dashboard.py  pyproject.toml  requirements.txt
.github/: readme.md
.github/workflows/: ci.yml  dashboard_update.yml  readme.md  test.yml
dashboard/: __main__.py
dashboard/service/: currency_service.py  weather_service.py
dashboard/tests/: test_service.py  test_update.py
dashboard/update/: helper.py  update.py
exports/: block-doomscrolling.shortcut  toggle-vpn.shortcut
morning/: morning.py  service.py  update.py
