[project]
name = "shortcuts"
version = "0.1.0"
description = ""
authors = [
    { name = "David Rabko", email = "david.rabko@icloud.com" }
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "notion-client (>=2.3.0,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-env (>=1.1.5,<2.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)",
    "coveralls (>=4.0.1,<5.0.0)",
    "feedparser (>=6.0.11,<7.0.0)",
    "tradernet-sdk (>=1.0.3,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env = [
    "FRANKFURTER_URL=",
    "NB_RB_URL=",
    "NOTION_TOKEN=",
    "MEETINGS_DATABASE=",
    "BUDGET_BLOCK=",
    "BUDGET_PAGE=",
    "TO_DOS_BLOCK=",
    "BIRTHDAYS_BLOCK=",
    "BUDGET_DB=",
    "WEATHER_ROW=",
    "BROKER_BLOCK=",
    "PROFIT_BLOCK=",
    "INVESTMENT_PAGE=",
    "TRADERNET_PUBLIC_KEY=",
    "TRADERNET_PRIVATE_KEY="
]

[tool.coverage.report]
exclude_also = [
    'if __name__ == .__main__.:'
]
